--- a/resource/res/templates/admin/admins_panel.html
+++ b/resource/res/templates/admin/admins_panel.html
@@ -37,7 +37,7 @@
 			<div class="col s12">
 				<ul class="tabs">
 					<li class="tab col s6"><a href="#add_normal" style="color: #02796e; font-weight: bold;">Thêm Admin</a></li>
-					<li class="tab col s6"><a href="#_add_via_file" class="active" style="color: #02796e; font-weight: bold;">Thêm Bằng File</a></li>
+					<!-- <li class="tab col s6"><a href="#_add_via_file" class="active" style="color: #02796e; font-weight: bold;">Thêm Bằng File</a></li> -->
 				</ul>
 			</div>
 			<div id="add_normal" class="col s12">
@@ -82,7 +82,7 @@
 					</div>
 				</form>
 			</div>
-			<div id="_add_via_file" class="col s12">
+			<!-- <div id="_add_via_file" class="col s12">
 				<span class="title">Tải File Mẫu: <a href="res/files/mau-them-danh-sach-admin.xlsx">TẠI ĐÂY</a></span><br />
 				<span class="title">Lưu Ý: <br />1, Không sửa file mẫu tránh gây lỗi khi nhập dữ liệu.</span>
 				<br />
@@ -106,7 +106,7 @@
 						</div>
 					</div>
 				</form>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
