--- a/resource/res/templates/admin/notifications_panel.html
+++ b/resource/res/templates/admin/notifications_panel.html
@@ -7,14 +7,14 @@
 	</div>
 	<div class="content">
 		<div class="row col l12">
-			<div class="col l6 s12">
+			<!-- <div class="col l6 s12">
 				<h6>Thông Báo Giáo Viên</h6>
 				<hr>
 				<div id="teacher_content" class="notification_content overflow scrollbar">
 				</div>
-			</div>
-			<div class="col l6 s12">
-				<h6>Thông Báo Học Sinh</h6>
+			</div> -->
+			<div>
+				<h6>Thông Báo </h6>
 				<hr>
 				<div id="student_content" class="notification_content overflow scrollbar">
 				</div>
@@ -33,11 +33,11 @@
 					<textarea id="notification_content" class="materialize-textarea" name="notification_content" required></textarea>
 				</div>
 				<div class="col l12 s12">
-					<div class="input-field">
+					<!-- <div class="input-field">
 						<select multiple name="teacher_id" id="teacher_id">
 							</select>
 						<label>Gíao Viên</label>
-					</div>
+					</div> -->
 					<div class="input-field">
 						<select multiple id="class_id" name="class_id">
 							</select>
