--- a/resource/res/templates/admin/students_panel.html
+++ b/resource/res/templates/admin/students_panel.html
@@ -8,9 +8,9 @@
 </div>
 <div class="block-content overflow scrollbar">
 	<div class="content">
-		<!-- <div class="preload hidden" id="preload">
+		<div class="preload hidden" id="preload">
 			<img src="res/img/loading.gif" alt="">
-		</div> -->
+		</div>
 		<table class="centered striped responsive-table" id="table_students">
 			<thead>
 				<tr>
@@ -32,7 +32,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="content fadeRight">
+	<!-- <div class="content fadeRight">
 		<div class="row">
 			<div class="col s12">
 				<ul class="tabs">
@@ -83,7 +83,7 @@
 				</form>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
 </div>
 <script src="res/libs/DataTables/js/jquery.dataTables.js"></script>
