--- a/resource/res/templates/admin/tests_panel.html
+++ b/resource/res/templates/admin/tests_panel.html
@@ -30,10 +30,10 @@
 							<label for="test_name">Tên</label>
 							<input type="text" id="test_name" name="test_name" required>
 						</div>
-						<div class="input-field">
+						<!-- <div class="input-field">
 							<label for="password">Mật khẩu</label>
 							<input type="password" id="password" name="password" required>
-						</div>
+						</div> -->
 						<div class="input-field">
 							<select name="class_id" id="class_id" onchange="list_unit()">
 							</select>
