--- a/resource/res/templates/admin/questions_panel.html
+++ b/resource/res/templates/admin/questions_panel.html
@@ -25,6 +25,7 @@
 					<th class="">C</th>
 					<th class="">D</th>
 					<th class="">Đúng</th>
+					<th class="">Hình ảnh</th>
 					<th class=""><i class="material-icons">settings</i></th>
 				</tr>
 			</thead>
@@ -37,13 +38,18 @@
 			<div class="col s12">
 				<ul class="tabs">
 					<li class="tab col s6"><a href="#add_normal" style="color: #02796e; font-weight: bold;">Thêm Câu Hỏi</a></li>
-					<li class="tab col s6"><a href="#_add_via_file" class="active" style="color: #02796e; font-weight: bold;">Thêm Bằng File</a></li>
 				</ul>
 			</div>
+
+
 			<div id="add_normal" class="col s12">
-				<form action="" method="POST" role="form" id="add_question_form">
-					<span class="title">để thêm ảnh vào nội dung câu hỏi, sử dụng cú pháp:</span>
-					<xmp><img src="đường dẫn ảnh" alt="" style="max-width: 400px;max-height: 200px"></xmp>
+				<form action="" method="POST" role="form" id="add_question_form" enctype="multipart/form-data">
+					<span class="title">Để thêm ảnh vào nội dung câu hỏi, sử dụng cú pháp:</span>
+					<div class="input-field" id="field_img">
+						<label for="img" id="lbl_img">Hình ảnh cho câu hỏi</label>
+						<br><br>
+						<input type="file" name="img" id="img" accept="image/*">
+					</div>
 
 					<div class="col l12 s12" style="padding-top: 20px">
 						<div class="input-field">
@@ -87,7 +93,8 @@
 					</div>
 				</form>
 			</div>
-			<div id="_add_via_file" class="col s12">
+
+			<!-- <div id="_add_via_file" class="col s12">
 				<span class="title">Tải File Mẫu: <a href="res/files/mau-them-danh-sach-cau-hoi.xlsx">TẠI ĐÂY</a></span><br />
 				<span class="title">Lưu Ý: <br />1, Không sửa file mẫu tránh gây lỗi khi nhập dữ liệu.</span>
 				<br />
@@ -117,7 +124,7 @@
 						</div>
 					</div>
 				</form>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
